Fixed testimonials edit box on mobile...

--- a/styles/testimonials_white.css
+++ b/styles/testimonials_white.css
@@ -118,7 +118,7 @@
 .testimonials__edit-textarea {
     margin-bottom: 16px;
     width: 100%;
-    min-width: 320px;
+    min-width: 280px;
     max-width: 100%;
     resize: vertical;
 }
